[gd_scene load_steps=10 format=3 uid="uid://berb6p86mq5qv"]

[ext_resource type="Script" path="res://Objects/MainCharacter.gd" id="1_1gw75"]
[ext_resource type="Texture2D" uid="uid://dhfvg8jhpyibs" path="res://icon.svg" id="2_hrw1k"]
[ext_resource type="PackedScene" uid="uid://qmc84n44pqd6" path="res://UI/KeyPopup.tscn" id="3_xja76"]
[ext_resource type="FontFile" uid="uid://bpnh1p4buv50g" path="res://fonts/Roboto-Regular.ttf" id="4_hyahp"]
[ext_resource type="PackedScene" uid="uid://dockhy0w3pjbg" path="res://UI/GUI.tscn" id="4_maq13"]
[ext_resource type="PackedScene" uid="uid://kj1psuogtg7v" path="res://Objects/StairsChecker.tscn" id="5_hp8n4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdbyy"]
size = Vector2(37, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mo5fw"]
size = Vector2(20, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8ldx"]

[node name="MainCharacter" type="CharacterBody2D"]
light_mask = 3
visibility_layer = 3
z_index = 100
collision_layer = 259
collision_mask = 259
script = ExtResource("1_1gw75")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(47.5, 48)
shape = SubResource("RectangleShape2D_fdbyy")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(46, 46)
scale = Vector2(0.28125, 0.28125)
texture = ExtResource("2_hrw1k")

[node name="DoorChecker" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorChecker"]
position = Vector2(47, 46)
shape = SubResource("RectangleShape2D_mo5fw")

[node name="DoorPopup" parent="." instance=ExtResource("3_xja76")]
visible = false
modulate = Color(1, 1, 1, 0.513726)
z_index = 999
offset_left = 38.0
offset_top = 1.0
offset_right = 52.0
offset_bottom = 27.0
pivot_offset = Vector2(7, 12)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_hyahp")

[node name="MinigamePopup" parent="." instance=ExtResource("3_xja76")]
visible = false
modulate = Color(1, 1, 1, 0.513726)
z_index = 999
offset_left = 38.0
offset_top = 1.0
offset_right = 52.0
offset_bottom = 27.0
pivot_offset = Vector2(7, 12)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_hyahp")
text = "W"

[node name="StairsPopup" parent="." instance=ExtResource("3_xja76")]
visible = false
modulate = Color(1, 1, 1, 0.513726)
z_index = 999
offset_left = 38.0
offset_top = 1.0
offset_right = 52.0
offset_bottom = 27.0
pivot_offset = Vector2(7, 12)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_hyahp")
text = "W"

[node name="MinigameChecker" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="MinigameChecker"]
position = Vector2(46, 45)
shape = SubResource("RectangleShape2D_t8ldx")

[node name="GUI" parent="." instance=ExtResource("4_maq13")]
z_index = 999
offset_left = -81.0
offset_top = -96.0
offset_right = 106.0
offset_bottom = 3.00001
scale = Vector2(0.600001, 0.600001)

[node name="StairsChecker" parent="." instance=ExtResource("5_hp8n4")]
position = Vector2(47, 46)

[connection signal="body_entered" from="DoorChecker" to="." method="_on_door_checker_body_entered"]
[connection signal="body_exited" from="DoorChecker" to="." method="_on_door_checker_body_exited"]
[connection signal="area_entered" from="StairsChecker" to="." method="_on_stairs_checker_area_entered"]
[connection signal="area_exited" from="StairsChecker" to="." method="_on_stairs_checker_area_exited"]

[editable path="StairsChecker"]
